<resources>
    <string name="app_name">App for e-Legion</string>
    <string name="app_2">Рассчитать остаток</string>
    <string name="app_3">Рассчитать скидку</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Assel Romanova</string>
    <string name="nav_header_subtitle">asel-romanova@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="enter_money">Введите сумму</string>
    <string name="tip_perc">25%</string>
    <string name="txt_tip">Остаток</string>
    <string name="total">Всего</string>
    <string name="save">Рассчитать скидку</string>
    <string name="enter_salary">Введите сумму</string>
    <string name="tipSavePercent">25%</string>
    <string name="totalSaved">Размер скидки</string>
    <string name="tip_calculator">Рассчитать сумму</string>

    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_add">+</string>
    <string name="_sub">-</string>
    <string name="_mult">*</string>
    <string name="_div">/</string>
    <string name="_eq">=</string>
    <string name="_db">.</string>
    <string name="_clear">AC</string>
    <string name="calculator">Калькулятор</string>
    <string name="save_per">Остаток</string>
    <string name="discount">Скидка</string>
    <string name="about_me">Обо мне</string>
    <string name="contact">Обратная связь</string>
    <string name="app_4">Обо мне</string>
    <string name="temp">Температура (в разработке)</string>
</resources>
