<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_drag_indicator_24px"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_donut_large_24px"
            android:title="@string/save_per" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_attach_money_24px"
            android:title="@string/discount" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/temp" />
    </group>

    <item android:title="@string/contact">
        <menu>
         <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_me" />
        </menu>
    </item>

</menu>
