<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

        <EditText
            android:id="@+id/edtSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@color/colorNumber"
            android:textColorHint="@color/colorOperation"
            android:ems="10"
            android:hint="@string/enter_salary"
            android:inputType="number"
            android:padding="@dimen/txt_padding" />

        <TextView
            android:id="@+id/savePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:layout_row="1"
            android:text="@string/tipSavePercent" />

        <SeekBar
            android:id="@+id/seekBarSave"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/seek_bar"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/saveTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_horizontal"
            android:layout_row="2"
            android:text="@string/totalSaved" />

        <TextView
            android:id="@+id/txtMoneySaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@color/colorNumber"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:padding="@dimen/txt_padding"
            android:text="" />

</GridLayout>