<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

        <EditText
            android:id="@+id/edtMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="9" />

        <TextView
            android:id="@+id/txtBillMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="5dp"
            android:layout_row="0"
            android:background="@color/colorNumber"
            android:hint="@string/enter_money"
            android:padding="@dimen/txt_padding"
            android:textColorHint="@color/colorOperation"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:layout_row="1"
            android:text="@string/tip_perc" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/seek_bar"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:max="50"
            android:progress="25" />

        <TextView
            android:id="@+id/Tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_horizontal"
            android:layout_row="2"
            android:text="@string/txt_tip" />

        <TextView
            android:id="@+id/txtTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@color/colorNumber"
            android:gravity="center"
            android:padding="@dimen/txt_padding"
            android:text=""
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="top|center"
            android:layout_row="3"
            android:text="@string/total" />

        <TextView
            android:id="@+id/txtTotalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@color/colorNumber"
            android:gravity="center"
            android:padding="@dimen/txt_padding"
            android:text=""
            android:textColor="@color/colorText" />

</GridLayout>